# AI-consumer-persona

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_fix.md  development_task.md  investigation_task.md  spike_rfc.md
.github/workflows/: ci.yml
.streamlit/: config.toml
ai_docs/: README.md  architecture.md  coding_standards.md  glossary.md
ai_docs/analysis/: abm_data_requirements.md
configs/: abm_scenarios.yaml  base.yaml  poc.yaml
data/cards/: toitta_sleep_interviews.jsonl
scripts/etl/: process_doctor_mindscape.py  process_impact_track_cards.py  process_toitta_interviews.py
scripts/ingest/: embed_and_upsert.py
scripts/synth/: generate_sleep_consumers.py
src/digital_twin/: __init__.py
src/digital_twin/abm/: calibration.py  consumer_agent.py  data_bridge.py  events.py  metrics.py  model.py  network.py  physician_agent.py  propagation.py  scenarios.py  visualization.py
src/digital_twin/api/: __init__.py  app.py  schemas.py  state.py
src/digital_twin/data/: anonymizer.py  data_card.py  loader.py  schema.py  segment_profile.py
src/digital_twin/engine/: prompt.py  simulator.py  sleep_prompt.py
src/digital_twin/evaluation/: hallucination.py  (+3 more)
templates/: consumer_skill.md  physician_skill.md  pretest_interpretation.txt  sleep_interview.md
tests/unit/: test_abm_funnel.py  test_anonymizer.py  test_builder.py  test_data_loaders.py  test_loader.py  test_profile.py  test_schema.py  test_sleep_prompt.py  test_toitta_cards.py
(+13 files in other folders)
