[project]
name = "ai-consumer-persona"
version = "0.1.0"
description = "AI Consumer Persona — LLMベースの生活者行動シミュレーション"
requires-python = ">=3.11"
dependencies = [
    # LLM
    "anthropic>=0.40.0",
    # Data modeling
    "pydantic>=2.0",
    # Data processing
    "pandas>=2.0",
    "polars>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    # API
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # UI
    "streamlit>=1.40",
    # Vector store
    "chromadb>=0.5",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.3",
    # Config
    "omegaconf>=2.3",
    "python-dotenv>=1.0",
    # Logging
    "structlog>=24.0",
    # Visualization
    "plotly>=5.20",
    "matplotlib>=3.8",
    # Report
    "jinja2>=3.1",
    # ABM
    "mesa>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digital_twin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
